--- a/rating.html
+++ b/rating.html
@@ -6,6 +6,43 @@
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
 		<style>
+			*{
+				margin: 0;
+				padding: 0;
+			}
+			.rate {
+				float: left;
+				height: 46px;
+				padding: 0 10px;
+			}
+			.rate:not(:checked) > input {
+				position:absolute;
+				top:-9999px;
+			}
+			.rate:not(:checked) > label {
+				float:right;
+				width:1em;
+				overflow:hidden;
+				white-space:nowrap;
+				cursor:pointer;
+				font-size:30px;
+				color:#ccc;
+			}
+			.rate:not(:checked) > label:before {
+				content: '★ ';
+			}
+			.rate > input:checked ~ label {
+				color: #ffc700;    
+			}
+			.rate:not(:checked) > label:hover,
+			.rate:not(:checked) > label:hover ~ label {
+				color: #deb217;  
+			}
+			.rate > input:checked + label:hover,
+			.rate > input:checked + label:hover ~ label,
+			.rate > label:hover ~ input:checked ~ label {
+				color: #c59b08;
+			}
 			/* Schrijf hier gewoon je CSS voor dit component */
 			
 			/* Hint: als je de sterren als achtergrond voor iets wilt gebruiken, zijn dit de SVG's die je kunt gebruiken:
@@ -18,28 +55,27 @@
 	</head>
 	<body>
 		<h1>Rating</h1>
-
-		<!-- Dit zijn de SVG's van de sterren. Maar horen die wel in HTML, of is dit eigenlijk styling?
-
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-				<path fill="#66E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798zM16 23.547l-6.983 3.671 1.334-7.776-5.65-5.507 7.808-1.134 3.492-7.075 3.492 7.075 7.807 1.134-5.65 5.507 1.334 7.776-6.983-3.671z"></path>
-			</svg>
-
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-				<path fill="#66E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"></path>
-			</svg>
-		-->
-
-		<!-- Waarschijnlijk wil je je rating ooit opslaan, dus heb je een formulier nodig -->
 		<form method="post">
 
-			<!-- Hint: hoeveel verschillende ratings kun je geven? -->
+			<div class="rate">
+				<input type="radio" id="star5" name="rate" value="5" />
+				<label for="star5" title="text">5 stars</label>
+				<input type="radio" id="star4" name="rate" value="4" />
+				<label for="star4" title="text">4 stars</label>
+				<input type="radio" id="star3" name="rate" value="3" />
+				<label for="star3" title="text">3 stars</label>
+				<input type="radio" id="star2" name="rate" value="2" />
+				<label for="star2" title="text">2 stars</label>
+				<input type="radio" id="star1" name="rate" value="1" />
+				<label for="star1" title="text">1 star</label>
+			  </div>
+			  <input type="submit">
 
 		</form>
 
 		<details open>
 			<summary>Demo video</summary>
-			<video src="assets/rating.mp4" width="271" height="110" controls muted autoplay loop>
+			<video src="assets/rating.mp4" width="271" height="110" controls muted loop>
 				<a href="assets/rating.mp4">assets/rating.mp4</a>
 			</video>
 		</details>
