--- a/switch.html
+++ b/switch.html
@@ -6,17 +6,71 @@
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
 		<style>
-			/* Schrijf hier gewoon je CSS voor dit component */
 
-			/* Hint: Dit component kun je volledig met HTML en CSS bouwen */
+			.switch {
+			position: relative;
+			display: inline-block;
+			width: 60px;
+			height: 34px;
+			}
 
-			/* Hint: Hoe ver ga je qua styling? Vraag jezelf dit altijd af */
+			.switch input { 
+				opacity: 0;
+				width: 0;
+				height: 0;
+			}
+
+			.slider {
+			position: absolute;
+			cursor: pointer;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: #ccc;
+			-webkit-transition: .4s;
+			transition: .4s;
+			}
+
+			.slider:before {
+			position: absolute;
+			content: "";
+			height: 26px;
+			width: 26px;
+			left: 4px;
+			bottom: 4px;
+			background-color: white;
+			-webkit-transition: .4s;
+			transition: .4s;
+			}
+
+			input:checked + .slider {
+			background-color: #2196F3;
+			content: "aan";
+			}
+
+			input:checked + .slider:before {
+			-webkit-transform: translateX(26px);
+			-ms-transform: translateX(26px);
+			transform: translateX(26px);
+			}
+
+			.slider.round {
+			border-radius: 34px;
+			}
+
+			.slider.round:before {
+			border-radius: 50%;
+			}
 		</style>
 	</head>
 	<body>
 		<h1>Switch control</h1>
 		
-		<!-- Hint: Op het WebKit blog stond hierover vorige maand een goed artikel -->
+		<label class="switch">
+			<input type="checkbox">
+			<span class="slider round"></span>
+		  </label>
 
 		<details open>
 			<summary>Demo video</summary>
